for NovelAI Character Reference